--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+1
+version: 1.1.0+1
 
 environment:
   sdk: ^3.8.1
@@ -34,25 +34,40 @@ dependencies:
   dio: ^5.9.0
   hive_ce: ^2.11.3
   path_provider: ^2.1.5
-  get_it: ^8.1.0
+  get_it: ^9.2.0
   html: ^0.15.4
-  go_router: ^16.2.2
-  intl: ^0.19.0
+  go_router: ^17.0.1
+  intl: ^0.20.2
   dynamic_color: ^1.7.0
   shared_preferences: ^2.2.2
   flutter_local_notifications: ^19.4.2
   timezone: ^0.10.0
   package_info_plus: ^9.0.0
   url_launcher: ^6.3.2
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^7.1.4
+  hive_ce_flutter: ^2.1.0
+  image_picker: ^1.2.1
+  flutter_secure_storage: ^10.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_markdown_plus: ^1.0.7
+  fluttertoast: ^9.0.0
+  open_filex: ^4.7.0
+  permission_handler: ^12.0.1
+  collection: ^1.19.1
+  share_plus: ^12.0.1
+  http: ^1.6.0
+  crypto: ^3.0.2
+  logging: ^1.3.0
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: ^2.0.1
+  hive_ce_generator: ^1.6.0
   build_runner: ^2.4.8
   json_serializable: ^6.8.0
   flutter_launcher_icons: ^0.14.4
@@ -62,7 +77,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
