--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -44,12 +44,165 @@
                 <category android:name="com.google.android.wearable.app.OPEN_ON_PHONE" />
                 <data android:scheme="nscgschedule" />
             </intent-filter>
+            <!-- Deep link handler for widgets -->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="nscgschedule" android:host="timetable" />
+                <data android:scheme="nscgschedule" android:host="exams" />
+            </intent-filter>
         </activity>
+        
+        <!-- ============================================ -->
+        <!-- LESSON WIDGETS (4 styles)                   -->
+        <!-- ============================================ -->
+        
+        <!-- STYLE 1: Next Lesson Compact Widget (2x1) -->
+        <receiver
+            android:name=".widgets.NextLessonCompactWidget"
+            android:exported="false"
+            android:label="@string/widget_lesson_label_compact">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_next_lesson_compact_info" />
+        </receiver>
+        
+        <!-- STYLE 2: Next Lesson Card Widget (2x2) -->
+        <receiver
+            android:name=".widgets.NextLessonCardWidget"
+            android:exported="false"
+            android:label="@string/widget_lesson_label_card">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_next_lesson_card_info" />
+        </receiver>
+        
+        <!-- STYLE 4: Today's Schedule Detailed Widget (4x3) -->
+        <receiver
+            android:name=".widgets.TodayScheduleDetailedWidget"
+            android:exported="false"
+            android:label="@string/widget_lesson_label_detailed">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_today_schedule_detailed_info" />
+        </receiver>
+        
+        <!-- ============================================ -->
+        <!-- EXAM WIDGETS (5 styles)                     -->
+        <!-- ============================================ -->
+        
+        <!-- STYLE 5: Next Exam Compact Widget (2x1) -->
+        <receiver
+            android:name=".widgets.NextExamCompactWidget"
+            android:exported="false"
+            android:label="@string/widget_exam_label_compact">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_next_exam_compact_info" />
+        </receiver>
+        
+        <!-- STYLE 6: Next Exam Card Widget (2x2) -->
+        <receiver
+            android:name=".widgets.NextExamCardWidget"
+            android:exported="false"
+            android:label="@string/widget_exam_label_card">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_next_exam_card_info" />
+        </receiver>
+        
+        <!-- STYLE 8: Exam Countdown Widget (2x2) -->
+        <receiver
+            android:name=".widgets.ExamCountdownWidget"
+            android:exported="false"
+            android:label="@string/widget_exam_label_countdown">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_exam_countdown_info" />
+        </receiver>
+        
+        <!-- STYLE 9: Exam Details Widget (4x3) -->
+        <receiver
+            android:name=".widgets.ExamDetailsWidget"
+            android:exported="false"
+            android:label="@string/widget_exam_label_details">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_exam_details_info" />
+        </receiver>
+        
+        <!-- ============================================ -->
+        <!-- UNIFIED WIDGETS (5 styles)                  -->
+        <!-- ============================================ -->
+        
+        <!-- STYLE 10: Unified Compact Widget (2x2) -->
+        <receiver
+            android:name=".widgets.UnifiedCompactWidget"
+            android:exported="false"
+            android:label="@string/widget_unified_label_compact">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_unified_compact_info" />
+        </receiver>
+        
+        <!-- STYLE 12: Unified Full Widget (4x3) -->
+        <receiver
+            android:name=".widgets.UnifiedFullWidget"
+            android:exported="false"
+            android:label="@string/widget_unified_label_full">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_unified_full_info" />
+        </receiver>
+        
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        
+        <!-- Widget Update Receiver for scheduled updates -->
+        <receiver
+            android:name=".widgets.WidgetUpdateReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="uk.bw86.nscgschedule.UPDATE_WIDGETS" />
+                <action android:name="uk.bw86.nscgschedule.UPDATE_LESSON_WIDGETS" />
+                <action android:name="uk.bw86.nscgschedule.UPDATE_EXAM_WIDGETS" />
+                <action android:name="android.intent.action.TIME_SET" />
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
+                <action android:name="android.intent.action.DATE_CHANGED" />
+            </intent-filter>
+        </receiver>
+        
         <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
         <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
             <intent-filter>
